<resources>
    <string name="app_name">TollPayment</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_news">News</string>
    <string name="title_settings">Settings</string>
    <string name="title_profile">Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="login_to_your_account_text">Login to your account</string>
    <string name="forgot_password_hint">I forgot my password</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="phone_hint">Phone</string>
    <string name="toll_id_hint">Toll Id</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="get_in_button">Get In</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="account_created_successfully">Account Created Successfully</string>
    <string name="dashboard">Dashboard</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="fund_your_wallet">Fund your wallet</string>
    <string name="fund_wallet">Fund Wallet</string>
    <string name="select_funding_source">Select Funding Source</string>
    <string name="enter_card_number">Enter Card Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="cvv">CVV</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="debit_card">Debit Card</string>
    <string name="hello">Hello </string>
    <string name="good">Good Morning</string>
    <string name="toll_id">TOLL ID: 1467-01</string>
    <string name="wallet_balance">Your wallet balance</string>
    <string name="wallet_money">#150,000.00</string>
    <string name="add_remove_vehicle">Add/Remove Vehicle</string>
    <string name="request_toll_device">Request Toll Device</string>
    <string name="view_passages">View Passages</string>
    <string name="my_vehicle">My Vehicles</string>
    <string name="honda_pilot">Honda Pilot - LAG 234 BG</string>
    <string name="suv">SUV : #250/passage</string>
    <string name="hyundai_elantra">Hyundai Elantra - SKV 364 BG</string>
    <string name="sedan">Sedan - #200/passage</string>
    <string name="my_recent_passages">My Recent Passages</string>
    <string name="passage1">Honda Pilot - LAG 234 BG - 10/02/20 5:30PM</string>
    <string name="passage2">Honda Pilot - LAG 234 BG - 10/02/20 5:30PM</string>
    <string name="passage3">Honda Pilot - LAG 234 BG - 10/02/20 5:30PM</string>
</resources>
