<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_page_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.968"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="25dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_menu" />

    <TextView
        android:layout_width="40dp"
        android:layout_height="27dp"
        android:layout_marginTop="96dp"
        android:text="@string/hello"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginTop="124dp"
        android:text="@string/good"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/cardColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/toll_id" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:text="@string/wallet_balance" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="60dp"
            android:text="@string/wallet_money"
            android:textColor="@color/blackColor"
            android:textSize="20sp"
            android:textStyle="bold" />



        <Button
            android:id="@+id/payButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="250dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/whiteColor"
            android:text="@string/fund_wallet"/>


    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="268dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_rectangle_copy_3" />

    <LinearLayout
        android:id="@+id/three_cards_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/add_remove_vehicle_cardView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="@color/cardColor">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/ic_car_2"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"/>
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_remove_vehicle"
                android:layout_gravity="bottom"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/request_toll_device_cardView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="@color/cardColor">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/ic_toll_road_2"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/request_toll_device"
                android:layout_gravity="bottom"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/view_passages_cardView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/cardColor">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/ic_file_2"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_passages"
                android:layout_gravity="bottom"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"/>
        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="432dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_line" />

    <LinearLayout
        android:id="@+id/vehicle_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="465dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_vehicle"
            android:layout_marginStart="20dp"
            android:textColor="@color/blackColor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/honda_pilot"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suv"
            android:layout_marginStart="40dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hyundai_elantra"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sedan"
            android:layout_marginStart="40dp" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="600dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_line" />

    <LinearLayout
        android:id="@+id/passages_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="633dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_vehicle"
            android:layout_marginStart="20dp"
            android:textColor="@color/blackColor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passage1"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passage2"
            android:layout_marginStart="40dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passage3"
            android:layout_marginStart="40dp" />




    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>