<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_page_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activities.RegActivity">

    <ImageView
        android:id="@+id/login_image_view"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/reg_form_linear_layout"/>

    <LinearLayout
        android:id="@+id/reg_form_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_image_view"
        >

        <TextView
            android:id="@+id/create_account_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginStart="25dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint"
                android:background="@drawable/round_edit_text"
                android:inputType="text"
                android:padding="10dp"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:background="@drawable/round_edit_text"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_hint"
                android:background="@drawable/round_edit_text"
                android:inputType="phone"
                android:padding="10dp"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"

            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:background="@drawable/round_edit_text"
                android:inputType="textPassword"
                android:padding="10dp"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cpass_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password_hint"
                android:background="@drawable/round_edit_text"
                android:inputType="textPassword"
                android:padding="10dp"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/create_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="90dp"
            android:layout_marginEnd="90dp"
            android:background="@drawable/round_button"
            android:text="@string/create_account"
            android:textSize="20sp"
            android:textColor="@color/whiteColor"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/already_have_an_account_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_form_linear_layout"
        app:layout_constraintVertical_bias="0.04">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_account"
            android:textSize="18sp"
            android:textColor="@color/mainColor"
            />

        <TextView
            android:id="@+id/sign_in_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textSize="18sp"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/mainColor"
            android:layout_marginStart="3dp"
            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>